# packages/api-client/openapi.json
@@ -258,12 +258,15 @@
           "required": true
         },
         "responses": {
+          "201": {
+            "description": "Created"
+          },
           "200": {
             "description": "OK",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/WriteEventAccepted"
+                  "$ref": "#/components/schemas/IResult"
                 }
               }
             }
@@ -316,6 +319,42 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/EventsPage"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/events/by-envelope/{id}": {
+      "get": {
+        "tags": [
+          "Events"
+        ],
+        "summary": "GET_events_by_envelope_id",
+        "description": "GET_events_by_envelope_id",
+        "operationId": "getEventsByEnvelope",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/EventsByEnvelope"
                 }
               }
             }
@@ -1213,6 +1252,23 @@
           }
         }
       },
+      "EventsByEnvelope": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "events": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/EventEnvelope"
+            },
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
       "EventsPage": {
         "type": "object",
         "properties": {
@@ -1762,19 +1818,6 @@
               "$ref": "#/components/schemas/HabitPeriodCheckIns"
             },
             "nullable": true
-          }
-        },
-        "additionalProperties": false
-      },
-      "WriteEventAccepted": {
-        "type": "object",
-        "properties": {
-          "accepted": {
-            "type": "boolean"
-          },
-          "sequence": {
-            "type": "integer",
-            "format": "int64"
           }
         },
         "additionalProperties": false
